@startuml

title __EXAMPLE's Class Diagram__\n

  namespace org.example {
    class org.example.App {
        {static} + main()
    }
  }
  

  namespace org.example {
    class org.example.Banka {
        - klienti : List<Klient>
        - ucty : List<Ucet>
        + Banka()
        + getKlientService()
        + getUcetService()
        + nacitajUctyKlienta()
        + odoberKlientaPodlaID()
        + odoberUcetKlientovi()
        + pridajKlienta()
        + zalozUcetKlientovi()
    }
  }
  

  org.example.Banka o-- service.KlientService : klientService
  org.example.Banka o-- service.UcetService : ucetService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
